--- a/ui2/src/app/component/mapa-piso/mapa-piso-create/mapa-piso-create.component.html
+++ b/ui2/src/app/component/mapa-piso/mapa-piso-create/mapa-piso-create.component.html
@@ -14,6 +14,7 @@
     <input #fileInput type="file" (change)="onFileSelected($event)" accept=".json">
     <div>
       <button (click)="createMapaPiso()">Add</button>
+      <button (click)="goBack()">Back</button>
     </div>
   </div>
 </body>
