--- a/ui2/src/app/component/elevador/elevador-update/elevador-update.component.html
+++ b/ui2/src/app/component/elevador/elevador-update/elevador-update.component.html
@@ -1,11 +1,19 @@
-<h1>Editar Elevador</h1>
+<div class="background-container"></div>
+<mat-toolbar>
+  <h1 class="h1">RobDroneGO</h1>
+</mat-toolbar>
 
-<div>
+<body>
+  <div class="box">
     <div>
       <table>
         <tr>
-          <th><label>Numero Identificativo: </label></th>
-          <th><input [(ngModel)]="elevador.numeroIdentificativo" /></th>
+          <mat-form-field>
+            <mat-label>Numero Identificativo </mat-label>
+            <mat-select [(ngModel)]="elevador.numeroIdentificativo">
+              <mat-option *ngFor="let elevador of elevadores" [value]="elevador">{{elevador}}</mat-option>
+            </mat-select>
+          </mat-form-field>
         </tr>
         <tr>
           <th><label>Descricao: </label></th>
@@ -15,28 +23,38 @@
           <th><label>Numero Serie: </label>
           <th><input type="string" [(ngModel)]="elevador.numeroSerie" />
         </tr>
-      <tr>
-        <th><label>Modelo: </label>
+        <tr>
+          <th><label>Modelo: </label>
           <th><input type="string" [(ngModel)]="elevador.modelo" />
-      </tr>
-      <tr>
-        <th><label>Marca: </label>
+        </tr>
+        <tr>
+          <th><label>Marca: </label>
           <th><input type="string" [(ngModel)]="elevador.marca" />
-      </tr>
-      <tr>
-        <th><label>Pisos Servidos: </label>
-          <th><input type="string" [(ngModel)]="elevador.pisosServidos" />
-      </tr>
-      <tr>
-        <th><label>Edificio: </label>
-          <th><input type="string" [(ngModel)]="elevador.edificio" />
-      </tr>
+        </tr>
+        <tr>
+          <mat-form-field>
+            <mat-label>Edificio </mat-label>
+            <mat-select [(ngModel)]="elevador.edificio">
+              <mat-option *ngFor="let edificio of edificios" [value]="edificio">{{edificio}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+          <button (click)="submitEdificio()">Submit</button>
+        </tr>
+        <tr>
+          <mat-form-field>
+            <mat-label>Pisos</mat-label>
+            <mat-select [(ngModel)]="elevador.pisosServidos" multiple>
+              <mat-option *ngFor="let piso of pisos" [value]="piso"> {{ piso }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </tr>
+
       </table>
     </div>
     <div>
-      <button class="buttonBack" (click)="goBack()">Back</button>
-      <button (click)="updateElevador()">Add</button>
+      <button (click)="updateElevador()">Update</button>
+      <button (click)="goBack()">Back</button>
     </div>
-
-
-</div>
+  </div>
+</body>
