--- a/ui2/src/app/component/robo/robo-list/robo-list.component.html
+++ b/ui2/src/app/component/robo/robo-list/robo-list.component.html
@@ -1,52 +1,55 @@
-<h1>Listar Robos</h1>
+<div class="background-container"></div>
+<mat-toolbar>
+    <h1 class="h1">RobDroneGO</h1>
+</mat-toolbar>
 
-<div>
-    <div class="search-container">
-        <mat-form-field appearance="fill">
-            <label>Search by KeyWord</label> <input matInput placeholder="key word" autocomplete="off"
-                (keyup)="filterData($event)">
-        </mat-form-field>
+<body>
+    <div class="box">
+        <div class="search-container">
+            <mat-form-field appearance="fill">
+                <label>Search by KeyWord</label> <input matInput placeholder="key word" autocomplete="off"
+                    (keyup)="filterData($event)">
+            </mat-form-field>
+        </div>
+
+        <br> <br>
+
+        <table mat-table matSort [dataSource]="dataSource" class="listagem">
+            <ng-container matColumnDef="Nickname">
+                <th mat-header-cell *matHeaderCellDef> Nickname</th>
+                <td mat-cell *matCellDef="let robo"> {{robo.nickname}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="Estado">
+                <th mat-header-cell *matHeaderCellDef> Estado</th>
+                <td mat-cell *matCellDef="let robo"> {{robo.estado}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="Codigo">
+                <th mat-header-cell *matHeaderCellDef> Codigo</th>
+                <td mat-cell *matCellDef="let robo"> {{robo.codigo}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="Marca">
+                <th mat-header-cell *matHeaderCellDef> Marca</th>
+                <td mat-cell *matCellDef="let robo"> {{robo.marca}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="Numero Serie">
+                <th mat-header-cell *matHeaderCellDef> Numero Serie</th>
+                <td mat-cell *matCellDef="let robo"> {{robo.numeroSerie}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="Tipo Robo">
+                <th mat-header-cell *matHeaderCellDef> Tipo Robo</th>
+                <td mat-cell *matCellDef="let robo"> {{robo.tipoRobo}} </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Page navigation"></mat-paginator>
+        <button class="buttonBack" (click)="goBack()">Back</button>
     </div>
-
-    <br> <br>
-
-    <table mat-table matSort [dataSource]="dataSource" class="listagem">
-        <ng-container matColumnDef="Nickname">
-            <th mat-header-cell *matHeaderCellDef> Nickname</th>
-            <td mat-cell *matCellDef="let robo"> {{robo.nickname}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="Estado">
-            <th mat-header-cell *matHeaderCellDef> Estado</th>
-            <td mat-cell *matCellDef="let robo"> {{robo.estado}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="Codigo">
-            <th mat-header-cell *matHeaderCellDef> Codigo</th>
-            <td mat-cell *matCellDef="let robo"> {{robo.codigo}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="Marca">
-            <th mat-header-cell *matHeaderCellDef> Marca</th>
-            <td mat-cell *matCellDef="let robo"> {{robo.marca}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="Numero Serie">
-            <th mat-header-cell *matHeaderCellDef> Numero Serie</th>
-            <td mat-cell *matCellDef="let robo"> {{robo.numeroSerie}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="Tipo Robo">
-            <th mat-header-cell *matHeaderCellDef> Tipo Robo</th>
-            <td mat-cell *matCellDef="let robo"> {{robo.tipoRobo}} </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-
-    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Page navigation"></mat-paginator>
-</div>
-
-<button class="buttonBack" (click)="goBack()">Back</button>
-<router-outlet></router-outlet>
+</body>
