--- a/ui2/src/app/component/elevador/elevador-list/elevador-list.component.html
+++ b/ui2/src/app/component/elevador/elevador-list/elevador-list.component.html
@@ -5,23 +5,25 @@
 
 <body>
     <div class="box">
-
-        <table>
-            <tr>
-                <td><label>Codigo Edificio: </label></td>
-                <td><input type="text" [(ngModel)]="codigoEdificio"> <br></td>
-            </tr>
-        </table>
-        <button (click)="listElevadores()" class="small-button">Search</button>
+        <mat-form-field>
+            <table>
+                <tr>
+                    <td><label>Codigo Edificio: </label></td>
+                    <td><input matInput type="text" [(ngModel)]="codigoEdificio"> <br></td>
+                </tr>
+            </table>
+            <button (click)="listElevadores()" class="small-button">Search</button>
+        </mat-form-field>
         <br> <br>
 
         <div>
             <div class="search-container">
                 <mat-form-field appearance="fill">
-                    <label>Search by KeyWord</label> <input matInput placeholder="key word" autocomplete="off"
+                    <label>Search by KeyWord</label> 
+                    <input matInput placeholder="key word" autocomplete="off"
                         (keyup)="filterData($event)">
                 </mat-form-field>
-            </div>
+            </div> 
 
             <br> <br>
 
