--- a/ui2/src/app/component/passagem/passagem-list/passagem-list.component.html
+++ b/ui2/src/app/component/passagem/passagem-list/passagem-list.component.html
@@ -5,8 +5,10 @@
 
 <body>
     <div class="box">
-
-        <div>
+        <button *ngIf="selectOption !== 1 && selectOption !== 2" (click)="listPassagens()">Listar passagens</button>
+        <button *ngIf="selectOption !== 1 && selectOption !== 2" (click)="listPisos()">Listar pisos com passagens</button>
+        
+        <div *ngIf="selectOption === 1">
             <div class="search-container">
                 <mat-form-field appearance="fill">
                     <label>Search by KeyWord</label> <input matInput placeholder="key word" autocomplete="off"
@@ -41,6 +43,46 @@
                 <ng-container matColumnDef="PisoB">
                     <th mat-header-cell *matHeaderCellDef> Piso B</th>
                     <td mat-cell *matCellDef="let passagem"> {{passagem.pisoB}} </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+
+            <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Page navigation"></mat-paginator>
+            <button (click)="goBack()">Back</button>
+        </div>
+    
+        <div *ngIf="selectOption === 2">
+            <table>
+                <tr>
+                    <td><label>codEdificio: </label></td>
+                    <td><input type="text" [(ngModel)]="codEdificio"> <br></td>
+                </tr>
+            </table>
+            <br> <br>
+            <button (click)="submitCodigo">Search</button>
+            <div class="search-container">
+                <mat-form-field appearance="fill">
+                    <label>Search by KeyWord</label> <input matInput placeholder="key word" autocomplete="off"
+                        (keyup)="filterData($event)">
+                </mat-form-field>
+            </div>
+            <br> <br>
+            <table mat-table matSort [dataSource]="dataSource2">
+                <ng-container matColumnDef="Descricao">
+                    <th mat-header-cell *matHeaderCellDef> Descricao</th>
+                    <td mat-cell *matCellDef="let passagem"> {{passagem.descricao}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="Designacao">
+                    <th mat-header-cell *matHeaderCellDef> Designacao</th>
+                    <td mat-cell *matCellDef="let passagem"> {{passagem.designacao}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="Edificio">
+                    <th mat-header-cell *matHeaderCellDef> Edificio</th>
+                    <td mat-cell *matCellDef="let passagem"> {{passagem.edificio}} </td>
                 </ng-container>
 
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
