--- a/ui2/src/app/component/robo/robo-update/robo-update.component.html
+++ b/ui2/src/app/component/robo/robo-update/robo-update.component.html
@@ -1,5 +1,7 @@
-<h1>Editar Robo</h1>
-
+<div class="background-container"></div>
+<mat-toolbar>
+    <h1 class="h1">RobDroneGO</h1>
+</mat-toolbar>
 <div>
     <div>
       <table>
